--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Excellent! ...but let's do better next time. -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -116,7 +117,7 @@ This is my second last dialogue so listen up.
 (after:time+5s)[=
 Go play (link-reveal:&quot;Mayor Mystery&quot;)[(open-url:&quot;https://greenguy5294.github.io/Mayor-Mystery/&quot;)].
 It&#39;s a fun game.
-до свидания</tw-passagedata><tw-passagedata pid="2" name="README" tags="" position="800,400" size="100,100">&lt;!-- Excellent! ...but let&#39;s do better next time. --&gt;</tw-passagedata></tw-storydata>
+до свидания</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
