--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ So, what do you do next?](else:)[You&#39;re in your (either: &quot;&quot;,&quot;
 (set: $bedroom_intro to true)
 
 [[Phone]]
-[[Mirror]](if:$run is 3)[&lt;br&gt;[[Gender void]]]
+[[Mirror]](if:$fun is 3)[&lt;br&gt;[[Gender void]]]
 [[Wardrobe]]
 
 (if:$routine_done is false)[[[Morning routine-&gt;morning fuckery]]](else:)[[[Go outside-&gt;Outside of House]]]</tw-passagedata><tw-passagedata pid="9" name="Phone" tags="" position="775,375" size="100,100">{&lt;!--[[Twindr]]--&gt;
