fixed password thing

--- a/dev.html
+++ b/dev.html
@@ -2939,7 +2939,7 @@ Also known as **questioning**, you&#39;re not 100% sure what your sexuality is. 
 (link-reveal-goto: &quot;Title&quot;, &quot;Title&quot;)[(track: &#39;ending&#39;, &#39;fadeout&#39;, 5)]</tw-passagedata><tw-passagedata pid="116" name="ворота Вунтак" tags="" position="275,125" size="100,100">(font:&quot;Consolas&quot;)+(text-colour:#2a76af)[What&#39;s the password, Hailey?]
 (input-box:2bind _code,&quot;X=========&quot;,1)
 (live: 1ms)[
-(if: _code is &quot;nomoresecrets&quot;)[(go-to: &quot;Title&quot;)]</tw-passagedata></tw-storydata>
+(if: _code is &quot;nomoresecrets&quot;)[(go-to: &quot;Title&quot;)]]</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
