fixed it again lol

--- a/dev.html
+++ b/dev.html
@@ -2937,7 +2937,7 @@ Also known as **questioning**, you&#39;re not 100% sure what your sexuality is. 
 (link-reveal-goto: &quot;Stats&quot;, &quot;Stats&quot;)[(track: &#39;ending&#39;, &#39;fadeout&#39;, 5)]
 (link-reveal-goto: &quot;File&quot;, &quot;File&quot;)[(track: &#39;ending&#39;, &#39;fadeout&#39;, 5)]
 (link-reveal-goto: &quot;Title&quot;, &quot;Title&quot;)[(track: &#39;ending&#39;, &#39;fadeout&#39;, 5)]</tw-passagedata><tw-passagedata pid="116" name="ворота Вунтак" tags="" position="275,125" size="100,100">(font:&quot;Consolas&quot;)+(text-colour:#2a76af)[What&#39;s the password, Hailey?]
-(input-box:2bind _code,&quot;X=========&quot;,1)
+(input-box:2bind _code,&quot;==X==&quot;,1)
 (live: 1ms)[
 (if: _code is &quot;nomoresecrets&quot;)[(go-to: &quot;Title&quot;)]]</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
