--- a/secretbeta.html
+++ b/secretbeta.html
@@ -8,8 +8,8 @@
 </style>
 </head>
 <body>
-<tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Hailey&#39;s Aesop v1.1 but scary.</tw-noscript></noscript></tw-story>
-<tw-storydata name="Hailey&#39;s Aesop v1.1 but scary" startnode="1" creator="Twine" creator-version="2.6.2" format="Harlowe" format-version="3.3.5" ifid="cc3d205d-227c-42a0-bf80-4f8ae0728206" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+<tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Hailey&#39;s Aesop v1.1.</tw-noscript></noscript></tw-story>
+<tw-storydata name="Hailey&#39;s Aesop v1.1" startnode="1" creator="Twine" creator-version="2.6.2" format="Harlowe" format-version="3.3.5" ifid="cc3d205d-227c-42a0-bf80-4f8ae0728206" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Raleway&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
